# stm32f0_ARM

labs/: CMakeLists.txt
labs/01_blank/: Makefile  main.c
labs/01_blank/core/: stm32f0xx.h
labs/01_blank/ind7/: main.c
labs/03_control_clock/: main.c
labs/03_reset/: Makefile
labs/08_timers_enc/: main.c
labs/08_timers_enc/lib/: ind7.h
