cmake_minimum_required(VERSION 3.15)
project(labs C)

set(CMAKE_C_STANDARD 11)

include_directories(01_blank/core)
include_directories(01_blank/plib)
include_directories(03_control_clock/core)
include_directories(03_control_clock/plib)
include_directories(03_reset/core)
include_directories(03_reset/plib)
include_directories(04_gpio/core)
include_directories(04_gpio/plib)
include_directories(05_nvic/core)
include_directories(05_nvic/plib)
include_directories(06_exti_systick/core)
include_directories(06_exti_systick/plib)
include_directories(07_timers_counter/core)
include_directories(07_timers_counter/plib)
include_directories(07_timers_inp_capture/core)
include_directories(07_timers_inp_capture/plib)
include_directories(08_timers_enc/core)
include_directories(08_timers_enc/plib)
include_directories(08_timers_pwm/core)
include_directories(08_timers_pwm/plib)
include_directories(09_usart_terminal/core)
include_directories(09_usart_terminal/plib)
include_directories(09_usart_xprintf/core)
include_directories(09_usart_xprintf/lib)
include_directories(09_usart_xprintf/plib)
include_directories(11_rtc_alert/core)
include_directories(11_rtc_alert/plib)
include_directories(12_i2c_oled_display/core)
include_directories(12_i2c_oled_display/lib)
include_directories(12_i2c_oled_display/plib)
include_directories(13_spi_shift_reg/core)
include_directories(13_spi_shift_reg/plib)
include_directories(14_adc_temp/core)
include_directories(14_adc_temp/lib)
include_directories(14_adc_temp/plib)
include_directories(14_dac/core)
include_directories(14_dac/plib)
include_directories(16_fsm/core)
include_directories(16_fsm/lib)
include_directories(16_fsm/plib)
include_directories(rtos/core)
include_directories(rtos/freertos)
include_directories(rtos/freertos/include)
include_directories(rtos/freertos/portable/GCC/ARM_CM0)
include_directories(rtos/lib)
include_directories(rtos/plib)
include_directories(rtos_idle/core)
include_directories(rtos_idle/freertos)
include_directories(rtos_idle/freertos/include)
include_directories(rtos_idle/freertos/portable/GCC/ARM_CM0)
include_directories(rtos_idle/lib)
include_directories(rtos_idle/plib)
include_directories(rtos_ipc/core)
include_directories(rtos_ipc/freertos)
include_directories(rtos_ipc/freertos/include)
include_directories(rtos_ipc/freertos/portable/GCC/ARM_CM0)
include_directories(rtos_ipc/lib)
include_directories(rtos_ipc/plib)
include_directories(terminal/core)
include_directories(terminal/lib)
include_directories(terminal/plib)

add_executable(labs
        01_blank/core/cmsis_gcc.h
        01_blank/core/core_cm0.h
        01_blank/core/stm32f051x8.h
        01_blank/core/stm32f0xx.h
        01_blank/core/system_stm32f0xx.c
        01_blank/core/system_stm32f0xx.h
        01_blank/ind7/main.c
        01_blank/lib/system_handlers.c
        01_blank/plib/stm32f0xx_ll_adc.h
        01_blank/plib/stm32f0xx_ll_bus.h
        01_blank/plib/stm32f0xx_ll_comp.h
        01_blank/plib/stm32f0xx_ll_cortex.h
        01_blank/plib/stm32f0xx_ll_crc.h
        01_blank/plib/stm32f0xx_ll_crs.h
        01_blank/plib/stm32f0xx_ll_dac.h
        01_blank/plib/stm32f0xx_ll_dma.h
        01_blank/plib/stm32f0xx_ll_exti.h
        01_blank/plib/stm32f0xx_ll_gpio.h
        01_blank/plib/stm32f0xx_ll_i2c.h
        01_blank/plib/stm32f0xx_ll_iwdg.h
        01_blank/plib/stm32f0xx_ll_pwr.h
        01_blank/plib/stm32f0xx_ll_rcc.h
        01_blank/plib/stm32f0xx_ll_rtc.h
        01_blank/plib/stm32f0xx_ll_spi.h
        01_blank/plib/stm32f0xx_ll_system.h
        01_blank/plib/stm32f0xx_ll_tim.h
        01_blank/plib/stm32f0xx_ll_usart.h
        01_blank/plib/stm32f0xx_ll_utils.h
        01_blank/plib/stm32f0xx_ll_wwdg.h
        01_blank/main.c
        03_control_clock/core/cmsis_gcc.h
        03_control_clock/core/core_cm0.h
        03_control_clock/core/stm32f051x8.h
        03_control_clock/core/stm32f0xx.h
        03_control_clock/core/system_stm32f0xx.c
        03_control_clock/core/system_stm32f0xx.h
        03_control_clock/lib/system_handlers.c
        03_control_clock/plib/stm32f0xx_ll_adc.h
        03_control_clock/plib/stm32f0xx_ll_bus.h
        03_control_clock/plib/stm32f0xx_ll_comp.h
        03_control_clock/plib/stm32f0xx_ll_cortex.h
        03_control_clock/plib/stm32f0xx_ll_crc.h
        03_control_clock/plib/stm32f0xx_ll_crs.h
        03_control_clock/plib/stm32f0xx_ll_dac.h
        03_control_clock/plib/stm32f0xx_ll_dma.h
        03_control_clock/plib/stm32f0xx_ll_exti.h
        03_control_clock/plib/stm32f0xx_ll_gpio.h
        03_control_clock/plib/stm32f0xx_ll_i2c.h
        03_control_clock/plib/stm32f0xx_ll_iwdg.h
        03_control_clock/plib/stm32f0xx_ll_pwr.h
        03_control_clock/plib/stm32f0xx_ll_rcc.h
        03_control_clock/plib/stm32f0xx_ll_rtc.h
        03_control_clock/plib/stm32f0xx_ll_spi.h
        03_control_clock/plib/stm32f0xx_ll_system.h
        03_control_clock/plib/stm32f0xx_ll_tim.h
        03_control_clock/plib/stm32f0xx_ll_usart.h
        03_control_clock/plib/stm32f0xx_ll_utils.h
        03_control_clock/plib/stm32f0xx_ll_wwdg.h
        03_control_clock/main.c
        03_reset/core/cmsis_gcc.h
        03_reset/core/core_cm0.h
        03_reset/core/stm32f051x8.h
        03_reset/core/stm32f0xx.h
        03_reset/core/system_stm32f0xx.c
        03_reset/core/system_stm32f0xx.h
        03_reset/lib/system_handlers.c
        03_reset/plib/stm32f0xx_ll_adc.h
        03_reset/plib/stm32f0xx_ll_bus.h
        03_reset/plib/stm32f0xx_ll_comp.h
        03_reset/plib/stm32f0xx_ll_cortex.h
        03_reset/plib/stm32f0xx_ll_crc.h
        03_reset/plib/stm32f0xx_ll_crs.h
        03_reset/plib/stm32f0xx_ll_dac.h
        03_reset/plib/stm32f0xx_ll_dma.h
        03_reset/plib/stm32f0xx_ll_exti.h
        03_reset/plib/stm32f0xx_ll_gpio.h
        03_reset/plib/stm32f0xx_ll_i2c.h
        03_reset/plib/stm32f0xx_ll_iwdg.h
        03_reset/plib/stm32f0xx_ll_pwr.h
        03_reset/plib/stm32f0xx_ll_rcc.h
        03_reset/plib/stm32f0xx_ll_rtc.h
        03_reset/plib/stm32f0xx_ll_spi.h
        03_reset/plib/stm32f0xx_ll_system.h
        03_reset/plib/stm32f0xx_ll_tim.h
        03_reset/plib/stm32f0xx_ll_usart.h
        03_reset/plib/stm32f0xx_ll_utils.h
        03_reset/plib/stm32f0xx_ll_wwdg.h
        03_reset/main.c
        04_gpio/core/cmsis_gcc.h
        04_gpio/core/core_cm0.h
        04_gpio/core/stm32f051x8.h
        04_gpio/core/stm32f0xx.h
        04_gpio/core/system_stm32f0xx.c
        04_gpio/core/system_stm32f0xx.h
        04_gpio/lib/system_handlers.c
        04_gpio/plib/stm32f0xx_ll_adc.h
        04_gpio/plib/stm32f0xx_ll_bus.h
        04_gpio/plib/stm32f0xx_ll_comp.h
        04_gpio/plib/stm32f0xx_ll_cortex.h
        04_gpio/plib/stm32f0xx_ll_crc.h
        04_gpio/plib/stm32f0xx_ll_crs.h
        04_gpio/plib/stm32f0xx_ll_dac.h
        04_gpio/plib/stm32f0xx_ll_dma.h
        04_gpio/plib/stm32f0xx_ll_exti.h
        04_gpio/plib/stm32f0xx_ll_gpio.h
        04_gpio/plib/stm32f0xx_ll_i2c.h
        04_gpio/plib/stm32f0xx_ll_iwdg.h
        04_gpio/plib/stm32f0xx_ll_pwr.h
        04_gpio/plib/stm32f0xx_ll_rcc.h
        04_gpio/plib/stm32f0xx_ll_rtc.h
        04_gpio/plib/stm32f0xx_ll_spi.h
        04_gpio/plib/stm32f0xx_ll_system.h
        04_gpio/plib/stm32f0xx_ll_tim.h
        04_gpio/plib/stm32f0xx_ll_usart.h
        04_gpio/plib/stm32f0xx_ll_utils.h
        04_gpio/plib/stm32f0xx_ll_wwdg.h
        04_gpio/main.c
        05_nvic/core/cmsis_gcc.h
        05_nvic/core/core_cm0.h
        05_nvic/core/stm32f051x8.h
        05_nvic/core/stm32f0xx.h
        05_nvic/core/system_stm32f0xx.c
        05_nvic/core/system_stm32f0xx.h
        05_nvic/lib/system_handlers.c
        05_nvic/plib/stm32f0xx_ll_adc.h
        05_nvic/plib/stm32f0xx_ll_bus.h
        05_nvic/plib/stm32f0xx_ll_comp.h
        05_nvic/plib/stm32f0xx_ll_cortex.h
        05_nvic/plib/stm32f0xx_ll_crc.h
        05_nvic/plib/stm32f0xx_ll_crs.h
        05_nvic/plib/stm32f0xx_ll_dac.h
        05_nvic/plib/stm32f0xx_ll_dma.h
        05_nvic/plib/stm32f0xx_ll_exti.h
        05_nvic/plib/stm32f0xx_ll_gpio.h
        05_nvic/plib/stm32f0xx_ll_i2c.h
        05_nvic/plib/stm32f0xx_ll_iwdg.h
        05_nvic/plib/stm32f0xx_ll_pwr.h
        05_nvic/plib/stm32f0xx_ll_rcc.h
        05_nvic/plib/stm32f0xx_ll_rtc.h
        05_nvic/plib/stm32f0xx_ll_spi.h
        05_nvic/plib/stm32f0xx_ll_system.h
        05_nvic/plib/stm32f0xx_ll_tim.h
        05_nvic/plib/stm32f0xx_ll_usart.h
        05_nvic/plib/stm32f0xx_ll_utils.h
        05_nvic/plib/stm32f0xx_ll_wwdg.h
        05_nvic/main.c
        06_exti_systick/core/cmsis_gcc.h
        06_exti_systick/core/core_cm0.h
        06_exti_systick/core/stm32f051x8.h
        06_exti_systick/core/stm32f0xx.h
        06_exti_systick/core/system_stm32f0xx.c
        06_exti_systick/core/system_stm32f0xx.h
        06_exti_systick/lib/system_handlers.c
        06_exti_systick/plib/stm32f0xx_ll_adc.h
        06_exti_systick/plib/stm32f0xx_ll_bus.h
        06_exti_systick/plib/stm32f0xx_ll_comp.h
        06_exti_systick/plib/stm32f0xx_ll_cortex.h
        06_exti_systick/plib/stm32f0xx_ll_crc.h
        06_exti_systick/plib/stm32f0xx_ll_crs.h
        06_exti_systick/plib/stm32f0xx_ll_dac.h
        06_exti_systick/plib/stm32f0xx_ll_dma.h
        06_exti_systick/plib/stm32f0xx_ll_exti.h
        06_exti_systick/plib/stm32f0xx_ll_gpio.h
        06_exti_systick/plib/stm32f0xx_ll_i2c.h
        06_exti_systick/plib/stm32f0xx_ll_iwdg.h
        06_exti_systick/plib/stm32f0xx_ll_pwr.h
        06_exti_systick/plib/stm32f0xx_ll_rcc.h
        06_exti_systick/plib/stm32f0xx_ll_rtc.h
        06_exti_systick/plib/stm32f0xx_ll_spi.h
        06_exti_systick/plib/stm32f0xx_ll_system.h
        06_exti_systick/plib/stm32f0xx_ll_tim.h
        06_exti_systick/plib/stm32f0xx_ll_usart.h
        06_exti_systick/plib/stm32f0xx_ll_utils.h
        06_exti_systick/plib/stm32f0xx_ll_wwdg.h
        06_exti_systick/main.c
        07_timers_counter/core/cmsis_gcc.h
        07_timers_counter/core/core_cm0.h
        07_timers_counter/core/stm32f051x8.h
        07_timers_counter/core/stm32f0xx.h
        07_timers_counter/core/system_stm32f0xx.c
        07_timers_counter/core/system_stm32f0xx.h
        07_timers_counter/lib/system_handlers.c
        07_timers_counter/plib/stm32f0xx_ll_adc.h
        07_timers_counter/plib/stm32f0xx_ll_bus.h
        07_timers_counter/plib/stm32f0xx_ll_comp.h
        07_timers_counter/plib/stm32f0xx_ll_cortex.h
        07_timers_counter/plib/stm32f0xx_ll_crc.h
        07_timers_counter/plib/stm32f0xx_ll_crs.h
        07_timers_counter/plib/stm32f0xx_ll_dac.h
        07_timers_counter/plib/stm32f0xx_ll_dma.h
        07_timers_counter/plib/stm32f0xx_ll_exti.h
        07_timers_counter/plib/stm32f0xx_ll_gpio.h
        07_timers_counter/plib/stm32f0xx_ll_i2c.h
        07_timers_counter/plib/stm32f0xx_ll_iwdg.h
        07_timers_counter/plib/stm32f0xx_ll_pwr.h
        07_timers_counter/plib/stm32f0xx_ll_rcc.h
        07_timers_counter/plib/stm32f0xx_ll_rtc.h
        07_timers_counter/plib/stm32f0xx_ll_spi.h
        07_timers_counter/plib/stm32f0xx_ll_system.h
        07_timers_counter/plib/stm32f0xx_ll_tim.h
        07_timers_counter/plib/stm32f0xx_ll_usart.h
        07_timers_counter/plib/stm32f0xx_ll_utils.h
        07_timers_counter/plib/stm32f0xx_ll_wwdg.h
        07_timers_counter/main.c
        07_timers_inp_capture/core/cmsis_gcc.h
        07_timers_inp_capture/core/core_cm0.h
        07_timers_inp_capture/core/stm32f051x8.h
        07_timers_inp_capture/core/stm32f0xx.h
        07_timers_inp_capture/core/system_stm32f0xx.c
        07_timers_inp_capture/core/system_stm32f0xx.h
        07_timers_inp_capture/lib/system_handlers.c
        07_timers_inp_capture/plib/stm32f0xx_ll_adc.h
        07_timers_inp_capture/plib/stm32f0xx_ll_bus.h
        07_timers_inp_capture/plib/stm32f0xx_ll_comp.h
        07_timers_inp_capture/plib/stm32f0xx_ll_cortex.h
        07_timers_inp_capture/plib/stm32f0xx_ll_crc.h
        07_timers_inp_capture/plib/stm32f0xx_ll_crs.h
        07_timers_inp_capture/plib/stm32f0xx_ll_dac.h
        07_timers_inp_capture/plib/stm32f0xx_ll_dma.h
        07_timers_inp_capture/plib/stm32f0xx_ll_exti.h
        07_timers_inp_capture/plib/stm32f0xx_ll_gpio.h
        07_timers_inp_capture/plib/stm32f0xx_ll_i2c.h
        07_timers_inp_capture/plib/stm32f0xx_ll_iwdg.h
        07_timers_inp_capture/plib/stm32f0xx_ll_pwr.h
        07_timers_inp_capture/plib/stm32f0xx_ll_rcc.h
        07_timers_inp_capture/plib/stm32f0xx_ll_rtc.h
        07_timers_inp_capture/plib/stm32f0xx_ll_spi.h
        07_timers_inp_capture/plib/stm32f0xx_ll_system.h
        07_timers_inp_capture/plib/stm32f0xx_ll_tim.h
        07_timers_inp_capture/plib/stm32f0xx_ll_usart.h
        07_timers_inp_capture/plib/stm32f0xx_ll_utils.h
        07_timers_inp_capture/plib/stm32f0xx_ll_wwdg.h
        07_timers_inp_capture/main.c
        08_timers_enc/core/cmsis_gcc.h
        08_timers_enc/core/core_cm0.h
        08_timers_enc/core/stm32f051x8.h
        08_timers_enc/core/stm32f0xx.h
        08_timers_enc/core/system_stm32f0xx.c
        08_timers_enc/core/system_stm32f0xx.h
        08_timers_enc/lib/system_handlers.c
        08_timers_enc/plib/stm32f0xx_ll_adc.h
        08_timers_enc/plib/stm32f0xx_ll_bus.h
        08_timers_enc/plib/stm32f0xx_ll_comp.h
        08_timers_enc/plib/stm32f0xx_ll_cortex.h
        08_timers_enc/plib/stm32f0xx_ll_crc.h
        08_timers_enc/plib/stm32f0xx_ll_crs.h
        08_timers_enc/plib/stm32f0xx_ll_dac.h
        08_timers_enc/plib/stm32f0xx_ll_dma.h
        08_timers_enc/plib/stm32f0xx_ll_exti.h
        08_timers_enc/plib/stm32f0xx_ll_gpio.h
        08_timers_enc/plib/stm32f0xx_ll_i2c.h
        08_timers_enc/plib/stm32f0xx_ll_iwdg.h
        08_timers_enc/plib/stm32f0xx_ll_pwr.h
        08_timers_enc/plib/stm32f0xx_ll_rcc.h
        08_timers_enc/plib/stm32f0xx_ll_rtc.h
        08_timers_enc/plib/stm32f0xx_ll_spi.h
        08_timers_enc/plib/stm32f0xx_ll_system.h
        08_timers_enc/plib/stm32f0xx_ll_tim.h
        08_timers_enc/plib/stm32f0xx_ll_usart.h
        08_timers_enc/plib/stm32f0xx_ll_utils.h
        08_timers_enc/plib/stm32f0xx_ll_wwdg.h
        08_timers_enc/main.c
        08_timers_pwm/core/cmsis_gcc.h
        08_timers_pwm/core/core_cm0.h
        08_timers_pwm/core/stm32f051x8.h
        08_timers_pwm/core/stm32f0xx.h
        08_timers_pwm/core/system_stm32f0xx.c
        08_timers_pwm/core/system_stm32f0xx.h
        08_timers_pwm/lib/system_handlers.c
        08_timers_pwm/plib/stm32f0xx_ll_adc.h
        08_timers_pwm/plib/stm32f0xx_ll_bus.h
        08_timers_pwm/plib/stm32f0xx_ll_comp.h
        08_timers_pwm/plib/stm32f0xx_ll_cortex.h
        08_timers_pwm/plib/stm32f0xx_ll_crc.h
        08_timers_pwm/plib/stm32f0xx_ll_crs.h
        08_timers_pwm/plib/stm32f0xx_ll_dac.h
        08_timers_pwm/plib/stm32f0xx_ll_dma.h
        08_timers_pwm/plib/stm32f0xx_ll_exti.h
        08_timers_pwm/plib/stm32f0xx_ll_gpio.h
        08_timers_pwm/plib/stm32f0xx_ll_i2c.h
        08_timers_pwm/plib/stm32f0xx_ll_iwdg.h
        08_timers_pwm/plib/stm32f0xx_ll_pwr.h
        08_timers_pwm/plib/stm32f0xx_ll_rcc.h
        08_timers_pwm/plib/stm32f0xx_ll_rtc.h
        08_timers_pwm/plib/stm32f0xx_ll_spi.h
        08_timers_pwm/plib/stm32f0xx_ll_system.h
        08_timers_pwm/plib/stm32f0xx_ll_tim.h
        08_timers_pwm/plib/stm32f0xx_ll_usart.h
        08_timers_pwm/plib/stm32f0xx_ll_utils.h
        08_timers_pwm/plib/stm32f0xx_ll_wwdg.h
        08_timers_pwm/main.c
        09_usart_terminal/core/cmsis_gcc.h
        09_usart_terminal/core/core_cm0.h
        09_usart_terminal/core/stm32f051x8.h
        09_usart_terminal/core/stm32f0xx.h
        09_usart_terminal/core/system_stm32f0xx.c
        09_usart_terminal/core/system_stm32f0xx.h
        09_usart_terminal/lib/system_handlers.c
        09_usart_terminal/plib/stm32f0xx_ll_adc.h
        09_usart_terminal/plib/stm32f0xx_ll_bus.h
        09_usart_terminal/plib/stm32f0xx_ll_comp.h
        09_usart_terminal/plib/stm32f0xx_ll_cortex.h
        09_usart_terminal/plib/stm32f0xx_ll_crc.h
        09_usart_terminal/plib/stm32f0xx_ll_crs.h
        09_usart_terminal/plib/stm32f0xx_ll_dac.h
        09_usart_terminal/plib/stm32f0xx_ll_dma.h
        09_usart_terminal/plib/stm32f0xx_ll_exti.h
        09_usart_terminal/plib/stm32f0xx_ll_gpio.h
        09_usart_terminal/plib/stm32f0xx_ll_i2c.h
        09_usart_terminal/plib/stm32f0xx_ll_iwdg.h
        09_usart_terminal/plib/stm32f0xx_ll_pwr.h
        09_usart_terminal/plib/stm32f0xx_ll_rcc.h
        09_usart_terminal/plib/stm32f0xx_ll_rtc.h
        09_usart_terminal/plib/stm32f0xx_ll_spi.h
        09_usart_terminal/plib/stm32f0xx_ll_system.h
        09_usart_terminal/plib/stm32f0xx_ll_tim.h
        09_usart_terminal/plib/stm32f0xx_ll_usart.h
        09_usart_terminal/plib/stm32f0xx_ll_utils.h
        09_usart_terminal/plib/stm32f0xx_ll_wwdg.h
        09_usart_terminal/main.c
        09_usart_xprintf/core/cmsis_gcc.h
        09_usart_xprintf/core/core_cm0.h
        09_usart_xprintf/core/stm32f051x8.h
        09_usart_xprintf/core/stm32f0xx.h
        09_usart_xprintf/core/system_stm32f0xx.c
        09_usart_xprintf/core/system_stm32f0xx.h
        09_usart_xprintf/lib/system_handlers.c
        09_usart_xprintf/lib/xprintf.c
        09_usart_xprintf/lib/xprintf.h
        09_usart_xprintf/plib/stm32f0xx_ll_adc.h
        09_usart_xprintf/plib/stm32f0xx_ll_bus.h
        09_usart_xprintf/plib/stm32f0xx_ll_comp.h
        09_usart_xprintf/plib/stm32f0xx_ll_cortex.h
        09_usart_xprintf/plib/stm32f0xx_ll_crc.h
        09_usart_xprintf/plib/stm32f0xx_ll_crs.h
        09_usart_xprintf/plib/stm32f0xx_ll_dac.h
        09_usart_xprintf/plib/stm32f0xx_ll_dma.h
        09_usart_xprintf/plib/stm32f0xx_ll_exti.h
        09_usart_xprintf/plib/stm32f0xx_ll_gpio.h
        09_usart_xprintf/plib/stm32f0xx_ll_i2c.h
        09_usart_xprintf/plib/stm32f0xx_ll_iwdg.h
        09_usart_xprintf/plib/stm32f0xx_ll_pwr.h
        09_usart_xprintf/plib/stm32f0xx_ll_rcc.h
        09_usart_xprintf/plib/stm32f0xx_ll_rtc.h
        09_usart_xprintf/plib/stm32f0xx_ll_spi.h
        09_usart_xprintf/plib/stm32f0xx_ll_system.h
        09_usart_xprintf/plib/stm32f0xx_ll_tim.h
        09_usart_xprintf/plib/stm32f0xx_ll_usart.h
        09_usart_xprintf/plib/stm32f0xx_ll_utils.h
        09_usart_xprintf/plib/stm32f0xx_ll_wwdg.h
        09_usart_xprintf/main.c
        11_rtc_alert/core/cmsis_gcc.h
        11_rtc_alert/core/core_cm0.h
        11_rtc_alert/core/stm32f051x8.h
        11_rtc_alert/core/stm32f0xx.h
        11_rtc_alert/core/system_stm32f0xx.c
        11_rtc_alert/core/system_stm32f0xx.h
        11_rtc_alert/lib/system_handlers.c
        11_rtc_alert/plib/stm32f0xx_ll_adc.h
        11_rtc_alert/plib/stm32f0xx_ll_bus.h
        11_rtc_alert/plib/stm32f0xx_ll_comp.h
        11_rtc_alert/plib/stm32f0xx_ll_cortex.h
        11_rtc_alert/plib/stm32f0xx_ll_crc.h
        11_rtc_alert/plib/stm32f0xx_ll_crs.h
        11_rtc_alert/plib/stm32f0xx_ll_dac.h
        11_rtc_alert/plib/stm32f0xx_ll_dma.h
        11_rtc_alert/plib/stm32f0xx_ll_exti.h
        11_rtc_alert/plib/stm32f0xx_ll_gpio.h
        11_rtc_alert/plib/stm32f0xx_ll_i2c.h
        11_rtc_alert/plib/stm32f0xx_ll_iwdg.h
        11_rtc_alert/plib/stm32f0xx_ll_pwr.h
        11_rtc_alert/plib/stm32f0xx_ll_rcc.h
        11_rtc_alert/plib/stm32f0xx_ll_rtc.h
        11_rtc_alert/plib/stm32f0xx_ll_spi.h
        11_rtc_alert/plib/stm32f0xx_ll_system.h
        11_rtc_alert/plib/stm32f0xx_ll_tim.h
        11_rtc_alert/plib/stm32f0xx_ll_usart.h
        11_rtc_alert/plib/stm32f0xx_ll_utils.h
        11_rtc_alert/plib/stm32f0xx_ll_wwdg.h
        11_rtc_alert/main.c
        12_i2c_oled_display/core/cmsis_gcc.h
        12_i2c_oled_display/core/core_cm0.h
        12_i2c_oled_display/core/stm32f051x8.h
        12_i2c_oled_display/core/stm32f0xx.h
        12_i2c_oled_display/core/system_stm32f0xx.c
        12_i2c_oled_display/core/system_stm32f0xx.h
        12_i2c_oled_display/lib/font5x7.c
        12_i2c_oled_display/lib/oled_driver.c
        12_i2c_oled_display/lib/oled_driver.h
        12_i2c_oled_display/lib/system_handlers.c
        12_i2c_oled_display/lib/xprintf.c
        12_i2c_oled_display/lib/xprintf.h
        12_i2c_oled_display/plib/stm32f0xx_ll_adc.h
        12_i2c_oled_display/plib/stm32f0xx_ll_bus.h
        12_i2c_oled_display/plib/stm32f0xx_ll_comp.h
        12_i2c_oled_display/plib/stm32f0xx_ll_cortex.h
        12_i2c_oled_display/plib/stm32f0xx_ll_crc.h
        12_i2c_oled_display/plib/stm32f0xx_ll_crs.h
        12_i2c_oled_display/plib/stm32f0xx_ll_dac.h
        12_i2c_oled_display/plib/stm32f0xx_ll_dma.h
        12_i2c_oled_display/plib/stm32f0xx_ll_exti.h
        12_i2c_oled_display/plib/stm32f0xx_ll_gpio.h
        12_i2c_oled_display/plib/stm32f0xx_ll_i2c.h
        12_i2c_oled_display/plib/stm32f0xx_ll_iwdg.h
        12_i2c_oled_display/plib/stm32f0xx_ll_pwr.h
        12_i2c_oled_display/plib/stm32f0xx_ll_rcc.h
        12_i2c_oled_display/plib/stm32f0xx_ll_rtc.h
        12_i2c_oled_display/plib/stm32f0xx_ll_spi.h
        12_i2c_oled_display/plib/stm32f0xx_ll_system.h
        12_i2c_oled_display/plib/stm32f0xx_ll_tim.h
        12_i2c_oled_display/plib/stm32f0xx_ll_usart.h
        12_i2c_oled_display/plib/stm32f0xx_ll_utils.h
        12_i2c_oled_display/plib/stm32f0xx_ll_wwdg.h
        12_i2c_oled_display/donov.c
        12_i2c_oled_display/main.c
        13_spi_shift_reg/core/cmsis_gcc.h
        13_spi_shift_reg/core/core_cm0.h
        13_spi_shift_reg/core/stm32f051x8.h
        13_spi_shift_reg/core/stm32f0xx.h
        13_spi_shift_reg/core/system_stm32f0xx.c
        13_spi_shift_reg/core/system_stm32f0xx.h
        13_spi_shift_reg/lib/system_handlers.c
        13_spi_shift_reg/plib/stm32f0xx_ll_adc.h
        13_spi_shift_reg/plib/stm32f0xx_ll_bus.h
        13_spi_shift_reg/plib/stm32f0xx_ll_comp.h
        13_spi_shift_reg/plib/stm32f0xx_ll_cortex.h
        13_spi_shift_reg/plib/stm32f0xx_ll_crc.h
        13_spi_shift_reg/plib/stm32f0xx_ll_crs.h
        13_spi_shift_reg/plib/stm32f0xx_ll_dac.h
        13_spi_shift_reg/plib/stm32f0xx_ll_dma.h
        13_spi_shift_reg/plib/stm32f0xx_ll_exti.h
        13_spi_shift_reg/plib/stm32f0xx_ll_gpio.h
        13_spi_shift_reg/plib/stm32f0xx_ll_i2c.h
        13_spi_shift_reg/plib/stm32f0xx_ll_iwdg.h
        13_spi_shift_reg/plib/stm32f0xx_ll_pwr.h
        13_spi_shift_reg/plib/stm32f0xx_ll_rcc.h
        13_spi_shift_reg/plib/stm32f0xx_ll_rtc.h
        13_spi_shift_reg/plib/stm32f0xx_ll_spi.h
        13_spi_shift_reg/plib/stm32f0xx_ll_system.h
        13_spi_shift_reg/plib/stm32f0xx_ll_tim.h
        13_spi_shift_reg/plib/stm32f0xx_ll_usart.h
        13_spi_shift_reg/plib/stm32f0xx_ll_utils.h
        13_spi_shift_reg/plib/stm32f0xx_ll_wwdg.h
        13_spi_shift_reg/main.c
        14_adc_temp/core/cmsis_gcc.h
        14_adc_temp/core/core_cm0.h
        14_adc_temp/core/stm32f051x8.h
        14_adc_temp/core/stm32f0xx.h
        14_adc_temp/core/system_stm32f0xx.c
        14_adc_temp/core/system_stm32f0xx.h
        14_adc_temp/lib/font5x7.c
        14_adc_temp/lib/oled_driver.c
        14_adc_temp/lib/oled_driver.h
        14_adc_temp/lib/system_handlers.c
        14_adc_temp/lib/xprintf.c
        14_adc_temp/lib/xprintf.h
        14_adc_temp/plib/stm32f0xx_ll_adc.h
        14_adc_temp/plib/stm32f0xx_ll_bus.h
        14_adc_temp/plib/stm32f0xx_ll_comp.h
        14_adc_temp/plib/stm32f0xx_ll_cortex.h
        14_adc_temp/plib/stm32f0xx_ll_crc.h
        14_adc_temp/plib/stm32f0xx_ll_crs.h
        14_adc_temp/plib/stm32f0xx_ll_dac.h
        14_adc_temp/plib/stm32f0xx_ll_dma.h
        14_adc_temp/plib/stm32f0xx_ll_exti.h
        14_adc_temp/plib/stm32f0xx_ll_gpio.h
        14_adc_temp/plib/stm32f0xx_ll_i2c.h
        14_adc_temp/plib/stm32f0xx_ll_iwdg.h
        14_adc_temp/plib/stm32f0xx_ll_pwr.h
        14_adc_temp/plib/stm32f0xx_ll_rcc.h
        14_adc_temp/plib/stm32f0xx_ll_rtc.h
        14_adc_temp/plib/stm32f0xx_ll_spi.h
        14_adc_temp/plib/stm32f0xx_ll_system.h
        14_adc_temp/plib/stm32f0xx_ll_tim.h
        14_adc_temp/plib/stm32f0xx_ll_usart.h
        14_adc_temp/plib/stm32f0xx_ll_utils.h
        14_adc_temp/plib/stm32f0xx_ll_wwdg.h
        14_adc_temp/main.c
        14_dac/core/cmsis_gcc.h
        14_dac/core/core_cm0.h
        14_dac/core/stm32f051x8.h
        14_dac/core/stm32f0xx.h
        14_dac/core/system_stm32f0xx.c
        14_dac/core/system_stm32f0xx.h
        14_dac/lib/system_handlers.c
        14_dac/plib/stm32f0xx_ll_adc.h
        14_dac/plib/stm32f0xx_ll_bus.h
        14_dac/plib/stm32f0xx_ll_comp.h
        14_dac/plib/stm32f0xx_ll_cortex.h
        14_dac/plib/stm32f0xx_ll_crc.h
        14_dac/plib/stm32f0xx_ll_crs.h
        14_dac/plib/stm32f0xx_ll_dac.h
        14_dac/plib/stm32f0xx_ll_dma.h
        14_dac/plib/stm32f0xx_ll_exti.h
        14_dac/plib/stm32f0xx_ll_gpio.h
        14_dac/plib/stm32f0xx_ll_i2c.h
        14_dac/plib/stm32f0xx_ll_iwdg.h
        14_dac/plib/stm32f0xx_ll_pwr.h
        14_dac/plib/stm32f0xx_ll_rcc.h
        14_dac/plib/stm32f0xx_ll_rtc.h
        14_dac/plib/stm32f0xx_ll_spi.h
        14_dac/plib/stm32f0xx_ll_system.h
        14_dac/plib/stm32f0xx_ll_tim.h
        14_dac/plib/stm32f0xx_ll_usart.h
        14_dac/plib/stm32f0xx_ll_utils.h
        14_dac/plib/stm32f0xx_ll_wwdg.h
        14_dac/main.c
        16_fsm/core/cmsis_gcc.h
        16_fsm/core/core_cm0.h
        16_fsm/core/stm32f051x8.h
        16_fsm/core/stm32f0xx.h
        16_fsm/core/system_stm32f0xx.c
        16_fsm/core/system_stm32f0xx.h
        16_fsm/lib/fsm.c
        16_fsm/lib/fsm.h
        16_fsm/lib/system_handlers.c
        16_fsm/plib/stm32f0xx_ll_adc.h
        16_fsm/plib/stm32f0xx_ll_bus.h
        16_fsm/plib/stm32f0xx_ll_comp.h
        16_fsm/plib/stm32f0xx_ll_cortex.h
        16_fsm/plib/stm32f0xx_ll_crc.h
        16_fsm/plib/stm32f0xx_ll_crs.h
        16_fsm/plib/stm32f0xx_ll_dac.h
        16_fsm/plib/stm32f0xx_ll_dma.h
        16_fsm/plib/stm32f0xx_ll_exti.h
        16_fsm/plib/stm32f0xx_ll_gpio.h
        16_fsm/plib/stm32f0xx_ll_i2c.h
        16_fsm/plib/stm32f0xx_ll_iwdg.h
        16_fsm/plib/stm32f0xx_ll_pwr.h
        16_fsm/plib/stm32f0xx_ll_rcc.h
        16_fsm/plib/stm32f0xx_ll_rtc.h
        16_fsm/plib/stm32f0xx_ll_spi.h
        16_fsm/plib/stm32f0xx_ll_system.h
        16_fsm/plib/stm32f0xx_ll_tim.h
        16_fsm/plib/stm32f0xx_ll_usart.h
        16_fsm/plib/stm32f0xx_ll_utils.h
        16_fsm/plib/stm32f0xx_ll_wwdg.h
        16_fsm/main.c
        examples/adc2dma.c
        examples/echo.c
        examples/exti.c
        examples/gpio.c
        examples/printf.c
        examples/pwm.c
        examples/simple_terminal.c
        examples/spi.c
        examples/timer.c
        examples/usart.c
        rtos/core/cmsis_gcc.h
        rtos/core/core_cm0.h
        rtos/core/stm32f051x8.h
        rtos/core/stm32f0xx.h
        rtos/core/stm32f0xx_it.c
        rtos/core/stm32f0xx_it.h
        rtos/core/system_stm32f0xx.c
        rtos/core/system_stm32f0xx.h
        rtos/freertos/include/croutine.h
        rtos/freertos/include/deprecated_definitions.h
        rtos/freertos/include/event_groups.h
        rtos/freertos/include/FreeRTOS.h
        rtos/freertos/include/list.h
        rtos/freertos/include/message_buffer.h
        rtos/freertos/include/mpu_prototypes.h
        rtos/freertos/include/mpu_wrappers.h
        rtos/freertos/include/portable.h
        rtos/freertos/include/projdefs.h
        rtos/freertos/include/queue.h
        rtos/freertos/include/semphr.h
        rtos/freertos/include/stack_macros.h
        rtos/freertos/include/StackMacros.h
        rtos/freertos/include/stream_buffer.h
        rtos/freertos/include/task.h
        rtos/freertos/include/timers.h
        rtos/freertos/portable/GCC/ARM_CM0/port.c
        rtos/freertos/portable/GCC/ARM_CM0/portmacro.h
        rtos/freertos/portable/MemMang/heap_4.c
        rtos/freertos/croutine.c
        rtos/freertos/event_groups.c
        rtos/freertos/FreeRTOSConfig.h
        rtos/freertos/list.c
        rtos/freertos/queue.c
        rtos/freertos/stream_buffer.c
        rtos/freertos/tasks.c
        rtos/freertos/timers.c
        rtos/lib/os_routines.c
        rtos/lib/os_routines.h
        rtos/lib/xprintf.c
        rtos/lib/xprintf.h
        rtos/plib/stm32f0xx_ll_adc.h
        rtos/plib/stm32f0xx_ll_bus.h
        rtos/plib/stm32f0xx_ll_comp.h
        rtos/plib/stm32f0xx_ll_cortex.h
        rtos/plib/stm32f0xx_ll_crc.h
        rtos/plib/stm32f0xx_ll_crs.h
        rtos/plib/stm32f0xx_ll_dac.h
        rtos/plib/stm32f0xx_ll_dma.h
        rtos/plib/stm32f0xx_ll_exti.h
        rtos/plib/stm32f0xx_ll_gpio.h
        rtos/plib/stm32f0xx_ll_i2c.h
        rtos/plib/stm32f0xx_ll_iwdg.h
        rtos/plib/stm32f0xx_ll_pwr.h
        rtos/plib/stm32f0xx_ll_rcc.h
        rtos/plib/stm32f0xx_ll_rtc.h
        rtos/plib/stm32f0xx_ll_spi.h
        rtos/plib/stm32f0xx_ll_system.h
        rtos/plib/stm32f0xx_ll_tim.h
        rtos/plib/stm32f0xx_ll_usart.h
        rtos/plib/stm32f0xx_ll_utils.h
        rtos/plib/stm32f0xx_ll_wwdg.h
        rtos/main.c
        rtos_idle/core/cmsis_gcc.h
        rtos_idle/core/core_cm0.h
        rtos_idle/core/stm32f051x8.h
        rtos_idle/core/stm32f0xx.h
        rtos_idle/core/stm32f0xx_it.c
        rtos_idle/core/stm32f0xx_it.h
        rtos_idle/core/system_stm32f0xx.c
        rtos_idle/core/system_stm32f0xx.h
        rtos_idle/freertos/include/croutine.h
        rtos_idle/freertos/include/deprecated_definitions.h
        rtos_idle/freertos/include/event_groups.h
        rtos_idle/freertos/include/FreeRTOS.h
        rtos_idle/freertos/include/list.h
        rtos_idle/freertos/include/message_buffer.h
        rtos_idle/freertos/include/mpu_prototypes.h
        rtos_idle/freertos/include/mpu_wrappers.h
        rtos_idle/freertos/include/portable.h
        rtos_idle/freertos/include/projdefs.h
        rtos_idle/freertos/include/queue.h
        rtos_idle/freertos/include/semphr.h
        rtos_idle/freertos/include/stack_macros.h
        rtos_idle/freertos/include/StackMacros.h
        rtos_idle/freertos/include/stream_buffer.h
        rtos_idle/freertos/include/task.h
        rtos_idle/freertos/include/timers.h
        rtos_idle/freertos/portable/GCC/ARM_CM0/port.c
        rtos_idle/freertos/portable/GCC/ARM_CM0/portmacro.h
        rtos_idle/freertos/portable/MemMang/heap_4.c
        rtos_idle/freertos/croutine.c
        rtos_idle/freertos/event_groups.c
        rtos_idle/freertos/FreeRTOSConfig.h
        rtos_idle/freertos/list.c
        rtos_idle/freertos/queue.c
        rtos_idle/freertos/stream_buffer.c
        rtos_idle/freertos/tasks.c
        rtos_idle/freertos/timers.c
        rtos_idle/lib/os_routines.c
        rtos_idle/lib/os_routines.h
        rtos_idle/lib/xprintf.c
        rtos_idle/lib/xprintf.h
        rtos_idle/plib/stm32f0xx_ll_adc.h
        rtos_idle/plib/stm32f0xx_ll_bus.h
        rtos_idle/plib/stm32f0xx_ll_comp.h
        rtos_idle/plib/stm32f0xx_ll_cortex.h
        rtos_idle/plib/stm32f0xx_ll_crc.h
        rtos_idle/plib/stm32f0xx_ll_crs.h
        rtos_idle/plib/stm32f0xx_ll_dac.h
        rtos_idle/plib/stm32f0xx_ll_dma.h
        rtos_idle/plib/stm32f0xx_ll_exti.h
        rtos_idle/plib/stm32f0xx_ll_gpio.h
        rtos_idle/plib/stm32f0xx_ll_i2c.h
        rtos_idle/plib/stm32f0xx_ll_iwdg.h
        rtos_idle/plib/stm32f0xx_ll_pwr.h
        rtos_idle/plib/stm32f0xx_ll_rcc.h
        rtos_idle/plib/stm32f0xx_ll_rtc.h
        rtos_idle/plib/stm32f0xx_ll_spi.h
        rtos_idle/plib/stm32f0xx_ll_system.h
        rtos_idle/plib/stm32f0xx_ll_tim.h
        rtos_idle/plib/stm32f0xx_ll_usart.h
        rtos_idle/plib/stm32f0xx_ll_utils.h
        rtos_idle/plib/stm32f0xx_ll_wwdg.h
        rtos_idle/main.c
        rtos_ipc/core/cmsis_gcc.h
        rtos_ipc/core/core_cm0.h
        rtos_ipc/core/stm32f051x8.h
        rtos_ipc/core/stm32f0xx.h
        rtos_ipc/core/stm32f0xx_it.c
        rtos_ipc/core/stm32f0xx_it.h
        rtos_ipc/core/system_stm32f0xx.c
        rtos_ipc/core/system_stm32f0xx.h
        rtos_ipc/freertos/include/croutine.h
        rtos_ipc/freertos/include/deprecated_definitions.h
        rtos_ipc/freertos/include/event_groups.h
        rtos_ipc/freertos/include/FreeRTOS.h
        rtos_ipc/freertos/include/list.h
        rtos_ipc/freertos/include/message_buffer.h
        rtos_ipc/freertos/include/mpu_prototypes.h
        rtos_ipc/freertos/include/mpu_wrappers.h
        rtos_ipc/freertos/include/portable.h
        rtos_ipc/freertos/include/projdefs.h
        rtos_ipc/freertos/include/queue.h
        rtos_ipc/freertos/include/semphr.h
        rtos_ipc/freertos/include/stack_macros.h
        rtos_ipc/freertos/include/StackMacros.h
        rtos_ipc/freertos/include/stream_buffer.h
        rtos_ipc/freertos/include/task.h
        rtos_ipc/freertos/include/timers.h
        rtos_ipc/freertos/portable/GCC/ARM_CM0/port.c
        rtos_ipc/freertos/portable/GCC/ARM_CM0/portmacro.h
        rtos_ipc/freertos/portable/MemMang/heap_4.c
        rtos_ipc/freertos/croutine.c
        rtos_ipc/freertos/event_groups.c
        rtos_ipc/freertos/FreeRTOSConfig.h
        rtos_ipc/freertos/list.c
        rtos_ipc/freertos/queue.c
        rtos_ipc/freertos/stream_buffer.c
        rtos_ipc/freertos/tasks.c
        rtos_ipc/freertos/timers.c
        rtos_ipc/lib/os_routines.c
        rtos_ipc/lib/os_routines.h
        rtos_ipc/lib/xprintf.c
        rtos_ipc/lib/xprintf.h
        rtos_ipc/plib/stm32f0xx_ll_adc.h
        rtos_ipc/plib/stm32f0xx_ll_bus.h
        rtos_ipc/plib/stm32f0xx_ll_comp.h
        rtos_ipc/plib/stm32f0xx_ll_cortex.h
        rtos_ipc/plib/stm32f0xx_ll_crc.h
        rtos_ipc/plib/stm32f0xx_ll_crs.h
        rtos_ipc/plib/stm32f0xx_ll_dac.h
        rtos_ipc/plib/stm32f0xx_ll_dma.h
        rtos_ipc/plib/stm32f0xx_ll_exti.h
        rtos_ipc/plib/stm32f0xx_ll_gpio.h
        rtos_ipc/plib/stm32f0xx_ll_i2c.h
        rtos_ipc/plib/stm32f0xx_ll_iwdg.h
        rtos_ipc/plib/stm32f0xx_ll_pwr.h
        rtos_ipc/plib/stm32f0xx_ll_rcc.h
        rtos_ipc/plib/stm32f0xx_ll_rtc.h
        rtos_ipc/plib/stm32f0xx_ll_spi.h
        rtos_ipc/plib/stm32f0xx_ll_system.h
        rtos_ipc/plib/stm32f0xx_ll_tim.h
        rtos_ipc/plib/stm32f0xx_ll_usart.h
        rtos_ipc/plib/stm32f0xx_ll_utils.h
        rtos_ipc/plib/stm32f0xx_ll_wwdg.h
        rtos_ipc/main.c
        terminal/core/cmsis_gcc.h
        terminal/core/core_cm0.h
        terminal/core/stm32f051x8.h
        terminal/core/stm32f0xx.h
        terminal/core/stm32f0xx_it.c
        terminal/core/stm32f0xx_it.h
        terminal/core/system_stm32f0xx.c
        terminal/core/system_stm32f0xx.h
        terminal/lib/adc.c
        terminal/lib/button.c
        terminal/lib/fsm.c
        terminal/lib/fsm.h
        terminal/lib/fsm_states_defs.h
        terminal/lib/led.c
        terminal/lib/pwm.c
        terminal/lib/terminal.c
        terminal/lib/terminal.h
        terminal/lib/xprintf.c
        terminal/lib/xprintf.h
        terminal/plib/stm32f0xx_ll_adc.h
        terminal/plib/stm32f0xx_ll_bus.h
        terminal/plib/stm32f0xx_ll_comp.h
        terminal/plib/stm32f0xx_ll_cortex.h
        terminal/plib/stm32f0xx_ll_crc.h
        terminal/plib/stm32f0xx_ll_crs.h
        terminal/plib/stm32f0xx_ll_dac.h
        terminal/plib/stm32f0xx_ll_dma.h
        terminal/plib/stm32f0xx_ll_exti.h
        terminal/plib/stm32f0xx_ll_gpio.h
        terminal/plib/stm32f0xx_ll_i2c.h
        terminal/plib/stm32f0xx_ll_iwdg.h
        terminal/plib/stm32f0xx_ll_pwr.h
        terminal/plib/stm32f0xx_ll_rcc.h
        terminal/plib/stm32f0xx_ll_rtc.h
        terminal/plib/stm32f0xx_ll_spi.h
        terminal/plib/stm32f0xx_ll_system.h
        terminal/plib/stm32f0xx_ll_tim.h
        terminal/plib/stm32f0xx_ll_usart.h
        terminal/plib/stm32f0xx_ll_utils.h
        terminal/plib/stm32f0xx_ll_wwdg.h
        terminal/main.c)
